--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
     <style>
         #buttons{
             display: flex;
-            justify-content: space-around;
+            justify-content: space-evenly;
         }
         button{
-            padding:30px;
+            padding:60px;
+        }
+
+        #clearDiv{
+            margin-top: 30px;
+            display:flex;
+            justify-content: center;
+        }
+
+        #output{
+            text-align: center;
         }
     </style>
 <head>
@@ -23,8 +33,8 @@
         <button id="button2">2</button>
         <button id="button3">3</button>
     </div>
-    <div>
-        <button id="clear">Clear</button>
+    <div id="clearDiv">
+        <button id="clear">Restart</button>
     </div>
     <p id="output"></p>
 </body>
